nav fast fertig, erste section fertig

--- a/index.html
+++ b/index.html
@@ -27,17 +27,15 @@
 
     <main>
         <section class="header">
-            <figure class="headOne">
+            <figure>
                 <a href="https://amzn.to/32MmHgL" target="_blank">
-                    <img src="assets/img/1.png" alt="">
+                    <img class="figImg" src="assets/img/1.png" alt="Ein Produktbild von einem bunten Rucksack der Marke Fjallraven">
                 </a>
 
-                <figcaption>Kanken Art Laptop 15" Special Edition Backpack
+                <figcaption class="figcap">Kanken Art Laptop 15" Special Edition Backpack
                     <p>$119.00</p>
-
                 </figcaption>
                 <p class="brand">Fjallraven</p>
-
             </figure>
         </section>
         <!-- 
