--- a/index.html
+++ b/index.html
@@ -29,13 +29,153 @@
         <section class="header">
             <figure>
                 <a href="https://amzn.to/32MmHgL" target="_blank">
-                    <img class="figImg" src="assets/img/1.png" alt="Ein Produktbild von einem bunten Rucksack der Marke Fjallraven">
+                    <img src="assets/img/1.png" alt="Ein Produktbild von einem bunten Rucksack der Marke Fjallraven">
                 </a>
 
                 <figcaption class="figcap">Kanken Art Laptop 15" Special Edition Backpack
                     <p>$119.00</p>
                 </figcaption>
                 <p class="brand">Fjallraven</p>
+            </figure>
+        </section>
+
+
+
+
+
+
+        <section class="productGallery">
+
+            <figure>
+                <a href="https://amzn.to/2WX7vtD" target="_blank">
+                    <img class="figImg" src="assets/img/d2.png" alt="Ein Produktbild von einer Schreibtischlampe der Marke Tomons">
+                </a>
+
+                <figcaption class="figcap">Swing Arm Wood Desk Lamp
+                    <p>$36.00</p>
+                </figcaption>
+                <p class="brand">Tomons</p>
+            </figure>
+
+            <figure>
+                <a href="https://amzn.to/2I3WvXM" target="_blank">
+                    <img class="figImg" src="assets/img/u6.png" alt="Ein Produktbild von einem schwarzen Rucksack der Marke Ucon Acrobatics">
+                </a>
+
+                <figcaption class="figcap">Hajo Backpack
+                    <p>$89.00</p>
+                </figcaption>
+                <p class="brand">Ucon Acrobatics</p>
+            </figure>
+
+            <figure>
+                <a href="https://amzn.to/2YX3043" target="_blank">
+                    <img class="figImg" src="assets/img/u10.png" alt="Ein Produktbild von einem Longboard der Marke Retrospec">
+                </a>
+
+                <figcaption class="figcap">Zed Bamboo Longboard
+                    <p>$60.00</p>
+                </figcaption>
+                <p class="brand">Retrospec</p>
+            </figure>
+
+            <figure>
+                <a href="https://amzn.to/2KfP3ee" target="_blank">
+                    <img class="figImg" src="assets/img/u9.png" alt="Ein Produktbild von einem Wasserkocher der Marke Fellow">
+                </a>
+
+                <figcaption class="figcap">Electric Pour-Over Kettle
+                    <p>$149.00</p>
+                </figcaption>
+                <p class="brand">Fellow</p>
+            </figure>
+
+            <figure>
+                <a href="https://amzn.to/2FYB3zT" target="_blank">
+                    <img class="figImg" src="assets/img/h17.png" alt="Ein Produktbild von einem Dekoobjekt in Form eines Autos der Marke Candylab Toys">
+                </a>
+
+                <figcaption class="figcap">Woodie Vintage Car
+                    <p>$35.00</p>
+                </figcaption>
+                <p class="brand">Candylab Toys</p>
+            </figure>
+
+            <figure>
+                <a href="https://www.bookdepository.com/Logo-Modernism-Jens-Muller-R-Roger-Remington/9783836545303/?a_aid=1991" target="_blank">
+                    <img class="figImg" src="assets/img/c3.png" alt="Ein Produktbild von dem Buch Logo Modernism von dem Verlag Taschen">
+                </a>
+
+                <figcaption class="figcap">Logo Modernism
+                    <p>$60.00</p>
+                </figcaption>
+                <p class="brand">Taschen</p>
+            </figure>
+
+        </section>
+
+
+
+
+
+
+
+
+        <section class="header">
+            <figure>
+                <a href="https://amzn.to/2YQLnCV" target="_blank">
+                    <img src="assets/img/d7.png" alt="Ein Produktbild von einem Buch des Designers Dieter Rams">
+                </a>
+
+                <figcaption class="figcap">Dieter Rams: As Little Design as Possible
+                    <p>$150.00</p>
+                </figcaption>
+                <p class="brand">Sophie Lovell</p>
+            </figure>
+        </section>
+
+
+
+        <section class="header">
+            <figure>
+                <a href="http://www.grupaproducts.com/arigato/" target="_blank">
+                    <img src="assets/img/h6.png" alt="Ein Produktbild von einer Tischlampe">
+                </a>
+
+                <figcaption class="figcap">Arigato Desk Lamp
+                    <p>$380.00</p>
+                </figcaption>
+                <p class="brand">Grupa</p>
+            </figure>
+        </section>
+
+
+
+        <section class="header">
+            <figure>
+                <a href="https://amzn.to/2Ij1IKA" target="_blank">
+                    <img src="assets/img/c22.png" alt="Ein Produktbild von einem Buch von Thames & Hudson">
+                </a>
+
+                <figcaption class="figcap">Min: The New Simplicity in Graphic Design
+                    <p>$28.00</p>
+                </figcaption>
+                <p class="brand">Thames & Hudson</p>
+            </figure>
+        </section>
+
+
+
+        <section class="header">
+            <figure>
+                <a href="https://amzn.to/2WMJbdy" target="_blank">
+                    <img src="assets/img/u8.png" alt="Ein Produktbild von einem Buch von Thames & Hudson">
+                </a>
+
+                <figcaption class="figcap">Bottle Grinder
+                    <p>$75.00</p>
+                </figcaption>
+                <p class="brand">Menu</p>
             </figure>
         </section>
         <!-- 
