--- a/index.html
+++ b/index.html
@@ -39,11 +39,6 @@
             </figure>
         </section>
 
-
-
-
-
-
         <section class="productGallery">
 
             <figure>
@@ -115,12 +110,6 @@
         </section>
 
 
-
-
-
-
-
-
         <section class="header">
             <figure>
                 <a href="https://amzn.to/2YQLnCV" target="_blank">
@@ -134,6 +123,75 @@
             </figure>
         </section>
 
+        <section class="productGallery">
+
+            <figure>
+                <a href="https://amzn.to/2I3lbQ7" target="_blank">
+                    <img class="figImg" src="assets/img/c6.png" alt="Ein Produktbild von dem Buch The Eye vom Autor Nathan Williams">
+                </a>
+
+                <figcaption class="figcap">The Eye
+                    <p>$28.00</p>
+                </figcaption>
+                <p class="brand">Nathan Williams</p>
+            </figure>
+
+            <figure>
+                <a href="https://amzn.to/2IifSvA" target="_blank">
+                    <img class="figImg" src="assets/img/h13.png" alt="Ein Produktbild von einem Schreibtisch Organizer der Marke Ugmonk">
+                </a>
+
+                <figcaption class="figcap">Gather Desk Organizer
+                    <p>$149.00</p>
+                </figcaption>
+                <p class="brand">Ugmonk</p>
+            </figure>
+
+            <figure>
+                <a href="https://amzn.to/2G84CiT" target="_blank">
+                    <img class="figImg" src="assets/img/h8.png" alt="Ein Produktbild von einer schwarzen Wasserflasche der Marke Corkcicle">
+                </a>
+
+                <figcaption class="figcap">Dipped Canteen
+                    <p>$28.00</p>
+                </figcaption>
+                <p class="brand">Corkcicle.</p>
+            </figure>
+
+            <figure>
+                <a href="https://amzn.to/2YWPz3N" target="_blank">
+                    <img class="figImg" src="assets/img/h2.png" alt="Ein Produktbild von einem weißen Schreibtischstuhl der Marke Herman Miller">
+                </a>
+
+                <figcaption class="figcap">Sayl Office Chair White
+                    <p>$599.00</p>
+                </figcaption>
+                <p class="brand">Herman Miller</p>
+            </figure>
+
+            <figure>
+                <a href="https://amzn.to/2KhwTsz" target="_blank">
+                    <img class="figImg" src="assets/img/d5.png" alt="Ein Produktbild von einem braunen Notizbuch der Marke Field Notes">
+                </a>
+
+                <figcaption class="figcap">Three Cherry Wood Notebook
+                    <p>$13.00</p>
+                </figcaption>
+                <p class="brand">Field Notes</p>
+            </figure>
+
+            <figure>
+                <a href="https://www.bookdepository.com/From-Japan/9780957081659?a_aid=1991" target="_blank">
+                    <img class="figImg" src="assets/img/c5.png" alt="Ein Produktbild von dem Buch From Japan des Verlags Counter Print">
+                </a>
+
+                <figcaption class="figcap">From Japan
+                    <p>$16.00</p>
+                </figcaption>
+                <p class="brand">Counter Print</p>
+            </figure>
+
+        </section>
 
 
         <section class="header">
@@ -149,7 +207,75 @@
             </figure>
         </section>
 
+        <section class="productGallery">
 
+            <figure>
+                <a href="https://amzn.to/2CZiPxO" target="_blank">
+                    <img class="figImg" src="assets/img/u7.png" alt="Ein Produktbild von der Uhr Winston Regal Watch der Marke Komono">
+                </a>
+
+                <figcaption class="figcap">Winston Regal Watch
+                    <p>$58.00</p>
+                </figcaption>
+                <p class="brand">Komono</p>
+            </figure>
+
+            <figure>
+                <a href="https://heyshop.es/collections/home/products/h-hey" target="_blank">
+                    <img class="figImg" src="assets/img/d4.png" alt="Ein Produktbild von einem Poster der Marke Hey Studio">
+                </a>
+
+                <figcaption class="figcap">Letter H Poster
+                    <p>$45.00</p>
+                </figcaption>
+                <p class="brand">Hey Studio</p>
+            </figure>
+
+            <figure>
+                <a href="https://amzn.to/2UGLHEQ" target="_blank">
+                    <img class="figImg" src="assets/img/u11.png" alt="Ein Produktbild von einer Getränkedose der Marke Blue Bottle Company">
+                </a>
+
+                <figcaption class="figcap">Coffee Can
+                    <p>$11.00</p>
+                </figcaption>
+                <p class="brand">Blue Bottle Company</p>
+            </figure>
+
+            <figure>
+                <a href="https://amzn.to/2UFjEWp" target="_blank">
+                    <img class="figImg" src="assets/img/h9.png" alt="Ein Produktbild von einem mintgrünen Kopfhörer der Marke Bang and Olufsen">
+                </a>
+
+                <figcaption class="figcap">Beoplay H4
+                    <p>$160.00</p>
+                </figcaption>
+                <p class="brand">Bang & Olufsen</p>
+            </figure>
+
+            <figure>
+                <a href="https://amzn.to/2OTHEQg" target="_blank">
+                    <img class="figImg" src="assets/img/p2.png" alt="Ein Produktbild von dem Buch Make it now vom Autor Anthony Burrill">
+                </a>
+
+                <figcaption class="figcap">Make It Now
+                    <p>$22.00</p>
+                </figcaption>
+                <p class="brand">Anthony Burrill</p>
+            </figure>
+
+            <figure>
+                <a href="https://amzn.to/2UFHfGt" target="_blank">
+                    <img class="figImg" src="assets/img/h4.png" alt="Ein Produktbild von einem schwarzen Stuhl der Marke Eames Style">
+                </a>
+
+                <figcaption class="figcap">Black Side Chair
+                    <p>$54.00</p>
+                </figcaption>
+                <p class="brand">Eames Style</p>
+            </figure>
+
+        </section>
 
         <section class="header">
             <figure>
@@ -164,6 +290,75 @@
             </figure>
         </section>
 
+        <section class="productGallery">
+
+            <figure>
+                <a href="https://amzn.to/2UxtLww" target="_blank">
+                    <img class="figImg" src="assets/img/c1.png" alt="Ein Produktbild von dem Buch Grid systems in graphic design des Autors Josef Müller-Brockmann">
+                </a>
+
+                <figcaption class="figcap">Grid systems in graphic design
+                    <p>$42.00</p>
+                </figcaption>
+                <p class="brand">Josef Müller-Brockmann</p>
+            </figure>
+
+            <figure>
+                <a href="https://amzn.to/2I5vxiq" target="_blank">
+                    <img class="figImg" src="assets/img/u12.png" alt="Ein Produktbild von einer Brieftasche der Marke Herschel">
+                </a>
+
+                <figcaption class="figcap">Card Wallet
+                    <p>$15.00</p>
+                </figcaption>
+                <p class="brand">Herschel</p>
+            </figure>
+
+            <figure>
+                <a href="https://goodfuckingdesignadvice.com/products/classic-advice-print" target="_blank">
+                    <img class="figImg" src="assets/img/p3.png" alt="Ein Produktbild von dem Buch Classic Advice des Verlags Good Fucking Design Advice">
+                </a>
+
+                <figcaption class="figcap">Classic Advice Print Black
+                    <p>$30.00</p>
+                </figcaption>
+                <p class="brand">Good Fucking Design Advice</p>
+            </figure>
+
+            <figure>
+                <a href="https://amzn.to/2D3yZWX" target="_blank">
+                    <img class="figImg" src="assets/img/life-15.png" alt="Ein Produktbild von einer schwarzen Computermaus der Marke Apple">
+                </a>
+
+                <figcaption class="figcap">Magic Mouse 2
+                    <p>$92.00</p>
+                </figcaption>
+                <p class="brand">Apple</p>
+            </figure>
+
+            <figure>
+                <a href="https://amzn.to/2WTbsPL" target="_blank">
+                    <img class="figImg" src="assets/img/life-17.png" alt="Ein Produktbild von einer schwarzen Wasserflasche der Marke Kinto">
+                </a>
+
+                <figcaption class="figcap">Travel Tumbler
+                    <p>$34.00</p>
+                </figcaption>
+                <p class="brand">Kinto</p>
+            </figure>
+
+            <figure>
+                <a href="https://amzn.to/2GbCf4A" target="_blank">
+                    <img class="figImg" src="assets/img/life-16.png" alt="Ein Produktbild von einer schwarzen Computertastatur der Marke Apple">
+                </a>
+
+                <figcaption class="figcap">Magic Keyboard
+                    <p>$139.00</p>
+                </figcaption>
+                <p class="brand">Apple</p>
+            </figure>
+
+        </section>
 
 
         <section class="header">
@@ -177,55 +372,9 @@
                 </figcaption>
                 <p class="brand">Menu</p>
             </figure>
-        </section>
-        <!-- 
-    <section class="gallery galOne">
-        <figure>
-            <img src="" alt="">
-            <figcaption>Name</figcaption>
-            <figcaption>Preis</figcaption>
-            <figcaption>Marke</figcaption>
-        </figure>
-        <figure>
-            <img src="" alt="">
-            <figcaption>Name</figcaption>
-            <figcaption>Preis</figcaption>
-            <figcaption>Marke</figcaption>
-        </figure>
-        <figure>
-            <img src="" alt="">
-            <figcaption>Name</figcaption>
-            <figcaption>Preis</figcaption>
-            <figcaption>Marke</figcaption>
-        </figure>
-        <figure>
-            <img src="" alt="">
-            <figcaption>Name</figcaption>
-            <figcaption>Preis</figcaption>
-            <figcaption>Marke</figcaption>
-        </figure>
-        <figure>
-            <img src="" alt="">
-            <figcaption>Name</figcaption>
-            <figcaption>Preis</figcaption>
-            <figcaption>Marke</figcaption>
-        </figure>
-        <figure>
-            <img src="" alt="">
-            <figcaption>Name</figcaption>
-            <figcaption>Preis</figcaption>
-            <figcaption>Marke</figcaption>
-        </figure>
-    </section>
 
-    <section class="header headTwo">
-        <figure>
-            <img src="" alt="">+
-            <figcaption>Name</figcaption>
-            <figcaption>Preis</figcaption>
-            <figcaption>Marke</figcaption>
-        </figure>
-    </section> -->
+            
+        </section>
     </main>
 </body>
 
