gallerien, header fertig. jetzt footer

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 
             <figure>
                 <a href="https://amzn.to/2WX7vtD" target="_blank">
-                    <img class="figImg" src="assets/img/d2.png" alt="Ein Produktbild von einer Schreibtischlampe der Marke Tomons">
+                    <img class="figImg" src="assets/img/d2.png"
+                        alt="Ein Produktbild von einer Schreibtischlampe der Marke Tomons">
                 </a>
 
                 <figcaption class="figcap">Swing Arm Wood Desk Lamp
@@ -54,7 +55,8 @@
 
             <figure>
                 <a href="https://amzn.to/2I3WvXM" target="_blank">
-                    <img class="figImg" src="assets/img/u6.png" alt="Ein Produktbild von einem schwarzen Rucksack der Marke Ucon Acrobatics">
+                    <img class="figImg" src="assets/img/u6.png"
+                        alt="Ein Produktbild von einem schwarzen Rucksack der Marke Ucon Acrobatics">
                 </a>
 
                 <figcaption class="figcap">Hajo Backpack
@@ -65,7 +67,8 @@
 
             <figure>
                 <a href="https://amzn.to/2YX3043" target="_blank">
-                    <img class="figImg" src="assets/img/u10.png" alt="Ein Produktbild von einem Longboard der Marke Retrospec">
+                    <img class="figImg" src="assets/img/u10.png"
+                        alt="Ein Produktbild von einem Longboard der Marke Retrospec">
                 </a>
 
                 <figcaption class="figcap">Zed Bamboo Longboard
@@ -76,7 +79,8 @@
 
             <figure>
                 <a href="https://amzn.to/2KfP3ee" target="_blank">
-                    <img class="figImg" src="assets/img/u9.png" alt="Ein Produktbild von einem Wasserkocher der Marke Fellow">
+                    <img class="figImg" src="assets/img/u9.png"
+                        alt="Ein Produktbild von einem Wasserkocher der Marke Fellow">
                 </a>
 
                 <figcaption class="figcap">Electric Pour-Over Kettle
@@ -87,7 +91,8 @@
 
             <figure>
                 <a href="https://amzn.to/2FYB3zT" target="_blank">
-                    <img class="figImg" src="assets/img/h17.png" alt="Ein Produktbild von einem Dekoobjekt in Form eines Autos der Marke Candylab Toys">
+                    <img class="figImg" src="assets/img/h17.png"
+                        alt="Ein Produktbild von einem Dekoobjekt in Form eines Autos der Marke Candylab Toys">
                 </a>
 
                 <figcaption class="figcap">Woodie Vintage Car
@@ -97,8 +102,10 @@
             </figure>
 
             <figure>
-                <a href="https://www.bookdepository.com/Logo-Modernism-Jens-Muller-R-Roger-Remington/9783836545303/?a_aid=1991" target="_blank">
-                    <img class="figImg" src="assets/img/c3.png" alt="Ein Produktbild von dem Buch Logo Modernism von dem Verlag Taschen">
+                <a href="https://www.bookdepository.com/Logo-Modernism-Jens-Muller-R-Roger-Remington/9783836545303/?a_aid=1991"
+                    target="_blank">
+                    <img class="figImg" src="assets/img/c3.png"
+                        alt="Ein Produktbild von dem Buch Logo Modernism von dem Verlag Taschen">
                 </a>
 
                 <figcaption class="figcap">Logo Modernism
@@ -127,7 +134,8 @@
 
             <figure>
                 <a href="https://amzn.to/2I3lbQ7" target="_blank">
-                    <img class="figImg" src="assets/img/c6.png" alt="Ein Produktbild von dem Buch The Eye vom Autor Nathan Williams">
+                    <img class="figImg" src="assets/img/c6.png"
+                        alt="Ein Produktbild von dem Buch The Eye vom Autor Nathan Williams">
                 </a>
 
                 <figcaption class="figcap">The Eye
@@ -138,7 +146,8 @@
 
             <figure>
                 <a href="https://amzn.to/2IifSvA" target="_blank">
-                    <img class="figImg" src="assets/img/h13.png" alt="Ein Produktbild von einem Schreibtisch Organizer der Marke Ugmonk">
+                    <img class="figImg" src="assets/img/h13.png"
+                        alt="Ein Produktbild von einem Schreibtisch Organizer der Marke Ugmonk">
                 </a>
 
                 <figcaption class="figcap">Gather Desk Organizer
@@ -149,7 +158,8 @@
 
             <figure>
                 <a href="https://amzn.to/2G84CiT" target="_blank">
-                    <img class="figImg" src="assets/img/h8.png" alt="Ein Produktbild von einer schwarzen Wasserflasche der Marke Corkcicle">
+                    <img class="figImg" src="assets/img/h8.png"
+                        alt="Ein Produktbild von einer schwarzen Wasserflasche der Marke Corkcicle">
                 </a>
 
                 <figcaption class="figcap">Dipped Canteen
@@ -160,7 +170,8 @@
 
             <figure>
                 <a href="https://amzn.to/2YWPz3N" target="_blank">
-                    <img class="figImg" src="assets/img/h2.png" alt="Ein Produktbild von einem weißen Schreibtischstuhl der Marke Herman Miller">
+                    <img class="figImg" src="assets/img/h2.png"
+                        alt="Ein Produktbild von einem weißen Schreibtischstuhl der Marke Herman Miller">
                 </a>
 
                 <figcaption class="figcap">Sayl Office Chair White
@@ -171,7 +182,8 @@
 
             <figure>
                 <a href="https://amzn.to/2KhwTsz" target="_blank">
-                    <img class="figImg" src="assets/img/d5.png" alt="Ein Produktbild von einem braunen Notizbuch der Marke Field Notes">
+                    <img class="figImg" src="assets/img/d5.png"
+                        alt="Ein Produktbild von einem braunen Notizbuch der Marke Field Notes">
                 </a>
 
                 <figcaption class="figcap">Three Cherry Wood Notebook
@@ -182,7 +194,8 @@
 
             <figure>
                 <a href="https://www.bookdepository.com/From-Japan/9780957081659?a_aid=1991" target="_blank">
-                    <img class="figImg" src="assets/img/c5.png" alt="Ein Produktbild von dem Buch From Japan des Verlags Counter Print">
+                    <img class="figImg" src="assets/img/c5.png"
+                        alt="Ein Produktbild von dem Buch From Japan des Verlags Counter Print">
                 </a>
 
                 <figcaption class="figcap">From Japan
@@ -211,7 +224,8 @@
 
             <figure>
                 <a href="https://amzn.to/2CZiPxO" target="_blank">
-                    <img class="figImg" src="assets/img/u7.png" alt="Ein Produktbild von der Uhr Winston Regal Watch der Marke Komono">
+                    <img class="figImg" src="assets/img/u7.png"
+                        alt="Ein Produktbild von der Uhr Winston Regal Watch der Marke Komono">
                 </a>
 
                 <figcaption class="figcap">Winston Regal Watch
@@ -222,7 +236,8 @@
 
             <figure>
                 <a href="https://heyshop.es/collections/home/products/h-hey" target="_blank">
-                    <img class="figImg" src="assets/img/d4.png" alt="Ein Produktbild von einem Poster der Marke Hey Studio">
+                    <img class="figImg" src="assets/img/d4.png"
+                        alt="Ein Produktbild von einem Poster der Marke Hey Studio">
                 </a>
 
                 <figcaption class="figcap">Letter H Poster
@@ -233,7 +248,8 @@
 
             <figure>
                 <a href="https://amzn.to/2UGLHEQ" target="_blank">
-                    <img class="figImg" src="assets/img/u11.png" alt="Ein Produktbild von einer Getränkedose der Marke Blue Bottle Company">
+                    <img class="figImg" src="assets/img/u11.png"
+                        alt="Ein Produktbild von einer Getränkedose der Marke Blue Bottle Company">
                 </a>
 
                 <figcaption class="figcap">Coffee Can
@@ -244,7 +260,8 @@
 
             <figure>
                 <a href="https://amzn.to/2UFjEWp" target="_blank">
-                    <img class="figImg" src="assets/img/h9.png" alt="Ein Produktbild von einem mintgrünen Kopfhörer der Marke Bang and Olufsen">
+                    <img class="figImg" src="assets/img/h9.png"
+                        alt="Ein Produktbild von einem mintgrünen Kopfhörer der Marke Bang and Olufsen">
                 </a>
 
                 <figcaption class="figcap">Beoplay H4
@@ -255,7 +272,8 @@
 
             <figure>
                 <a href="https://amzn.to/2OTHEQg" target="_blank">
-                    <img class="figImg" src="assets/img/p2.png" alt="Ein Produktbild von dem Buch Make it now vom Autor Anthony Burrill">
+                    <img class="figImg" src="assets/img/p2.png"
+                        alt="Ein Produktbild von dem Buch Make it now vom Autor Anthony Burrill">
                 </a>
 
                 <figcaption class="figcap">Make It Now
@@ -266,7 +284,8 @@
 
             <figure>
                 <a href="https://amzn.to/2UFHfGt" target="_blank">
-                    <img class="figImg" src="assets/img/h4.png" alt="Ein Produktbild von einem schwarzen Stuhl der Marke Eames Style">
+                    <img class="figImg" src="assets/img/h4.png"
+                        alt="Ein Produktbild von einem schwarzen Stuhl der Marke Eames Style">
                 </a>
 
                 <figcaption class="figcap">Black Side Chair
@@ -294,7 +313,8 @@
 
             <figure>
                 <a href="https://amzn.to/2UxtLww" target="_blank">
-                    <img class="figImg" src="assets/img/c1.png" alt="Ein Produktbild von dem Buch Grid systems in graphic design des Autors Josef Müller-Brockmann">
+                    <img class="figImg" src="assets/img/c1.png"
+                        alt="Ein Produktbild von dem Buch Grid systems in graphic design des Autors Josef Müller-Brockmann">
                 </a>
 
                 <figcaption class="figcap">Grid systems in graphic design
@@ -305,7 +325,8 @@
 
             <figure>
                 <a href="https://amzn.to/2I5vxiq" target="_blank">
-                    <img class="figImg" src="assets/img/u12.png" alt="Ein Produktbild von einer Brieftasche der Marke Herschel">
+                    <img class="figImg" src="assets/img/u12.png"
+                        alt="Ein Produktbild von einer Brieftasche der Marke Herschel">
                 </a>
 
                 <figcaption class="figcap">Card Wallet
@@ -316,7 +337,8 @@
 
             <figure>
                 <a href="https://goodfuckingdesignadvice.com/products/classic-advice-print" target="_blank">
-                    <img class="figImg" src="assets/img/p3.png" alt="Ein Produktbild von dem Buch Classic Advice des Verlags Good Fucking Design Advice">
+                    <img class="figImg" src="assets/img/p3.png"
+                        alt="Ein Produktbild von dem Buch Classic Advice des Verlags Good Fucking Design Advice">
                 </a>
 
                 <figcaption class="figcap">Classic Advice Print Black
@@ -327,7 +349,8 @@
 
             <figure>
                 <a href="https://amzn.to/2D3yZWX" target="_blank">
-                    <img class="figImg" src="assets/img/life-15.png" alt="Ein Produktbild von einer schwarzen Computermaus der Marke Apple">
+                    <img class="figImg" src="assets/img/life-15.png"
+                        alt="Ein Produktbild von einer schwarzen Computermaus der Marke Apple">
                 </a>
 
                 <figcaption class="figcap">Magic Mouse 2
@@ -338,7 +361,8 @@
 
             <figure>
                 <a href="https://amzn.to/2WTbsPL" target="_blank">
-                    <img class="figImg" src="assets/img/life-17.png" alt="Ein Produktbild von einer schwarzen Wasserflasche der Marke Kinto">
+                    <img class="figImg" src="assets/img/life-17.png"
+                        alt="Ein Produktbild von einer schwarzen Wasserflasche der Marke Kinto">
                 </a>
 
                 <figcaption class="figcap">Travel Tumbler
@@ -349,7 +373,8 @@
 
             <figure>
                 <a href="https://amzn.to/2GbCf4A" target="_blank">
-                    <img class="figImg" src="assets/img/life-16.png" alt="Ein Produktbild von einer schwarzen Computertastatur der Marke Apple">
+                    <img class="figImg" src="assets/img/life-16.png"
+                        alt="Ein Produktbild von einer schwarzen Computertastatur der Marke Apple">
                 </a>
 
                 <figcaption class="figcap">Magic Keyboard
@@ -373,7 +398,45 @@
                 <p class="brand">Menu</p>
             </figure>
 
-            
+        </section>
+
+        <section class="productGallery">
+            <figure>
+                <a href="https://amzn.to/2JLtxvk" target="_blank">
+                    <img class="figImg" src="assets/img/home-8.png"
+                        alt="Ein Produktbild von einer schwarz silbernen Thermoskanne der Marke Normann Copenhagen">
+                </a>
+
+                <figcaption class="figcap">Geo Thermos
+                    <p>$62.00</p>
+                </figcaption>
+                <p class="brand">Normann Copenhagen</p>
+            </figure>
+
+            <figure>
+                <a href="https://amzn.to/2YdSBPy" target="_blank">
+                    <img class="figImg" src="assets/img/home-10.png"
+                        alt="Ein Produktbild von einem dunkelgrauen Sessel der Marke Kardiel">
+                </a>
+
+                <figcaption class="figcap">Womb Chair & Ottoman
+                    <p>$799.00</p>
+                </figcaption>
+                <p class="brand">Kardiel</p>
+            </figure>
+
+            <figure>
+                <a href="https://amzn.to/2LCEfGP" target="_blank">
+                    <img class="figImg" src="assets/img/home-9.png"
+                        alt="Ein Produktbild von einer Glaskaraffe der Marke Soma">
+                </a>
+
+                <figcaption class="figcap">Water Filter Glass Carafe
+                    <p>$30.00</p>
+                </figcaption>
+                <p class="brand">Soma</p>
+            </figure>
+
         </section>
     </main>
 </body>
