--- a/index.html
+++ b/index.html
@@ -436,8 +436,34 @@
                 </figcaption>
                 <p class="brand">Soma</p>
             </figure>
-
         </section>
+
+        <footer>
+            <h3>The Design Shop</h3>
+            <h3>Contact</h3>
+            <h3>Newsletter</h3>
+            <h3>Find Us Here</h3>
+            <p class="copyright">Carefully curated online design store, <br> founded and designed by <span>Ruby Bacanovic.</span></p>
+
+            <div class="contact">
+                <a href="" target="_blank">Email us</a>
+                <a href="" target="_blank">Work with us</a>
+            </div>
+
+            <div class="newsletter">
+                <p>Click here to <a href="" target="_blank">subscribe</a></p>
+                <p>Don't worry. We hate spam too.</p>
+            </div>
+
+            <div class="socialmedia">
+                <a href="" target="_blank">Facebook</a>
+                <a href="" target="_blank">Instagram</a>
+                <a href="" target="_blank">Twitter</a>
+            </div>
+
+            <p class="sender">&copy; <a href="index.html">2019 The Design Shop</a> &#xb7; <a href="">The Design Blog</a>
+            </p>
+        </footer>
     </main>
 </body>
 
